[package]
name = "mouse_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
inputbot = "0.6.0"
opencv = "0.89.0"
system_shutdown = "4.0.1"
teloxide = "0.12.2"
tokio = {version = "1.37.0", features = ["full"]}

